commentaire-index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- index.html -->
   <meta charset="utf-8">
   <title>CdaWeb</title>
   <base href="/">
